<resources>
    <string name="app_name">UTE Foodie</string>
    <string name="brand">UTE Foodie</string>
    <string name="slogan">Hãy ăn theo cách của bạn</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="reset_password">Chúng tôi đã gửi đến email của bạn link reset password, kiểm tra hộp thư đến và làm theo chỉ dẫn!</string>
    <string name="failed">Gửi thất bại!</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- Bottom Navigation -->
    <string name="order_title">Đơn hàng</string>
    <string name="cart_title">Giỏ hàng</string>
    <string name="profile_title">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_orders">Quản lý đơn hàng</string>
    <string name="menu_categories">Quản lý danh mục</string>
    <string name="menu_foods">Quản lý món ăn</string>
    <string name="menu_chinhsuathongtin">Chỉnh sửa thông tin</string>
    <string name="menu_doimatkhau">Đổi mật khẩu</string>
    <string name="menu_dangxuat">Đăng xuất</string>

    <string-array name="danhmuc">
        <item>Bữa sáng</item>
        <item>Bữa trưa</item>
        <item>Bữa tối</item>
        <item>Tráng miệng</item>
    </string-array>

    <string-array name="trangthaiDH">
        <item>Chờ xác nhận</item>
        <item>Đã xác nhận</item>
        <item>Đang vận chuyển</item>
        <item>Hoàn thành</item>
    </string-array>
    
</resources>
